@@ -1445,6 +1445,7 @@ public:
         SrcRectConstraint controls the behavior at the edge of source SkRect,
         provided to drawImageRect() when there is any filtering. If kStrict is set,
         then extra code is used to ensure it nevers samples outside of the src-rect.
+        kStrict_SrcRectConstraint disables the use of mipmaps.
     */
     enum SrcRectConstraint {
         kStrict_SrcRectConstraint, //!< sample only inside bounds; slower
